// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recalcualtes width on layout event 1`] = `
<View
  onLayout={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "/super-awesome-image.jpg",
      }
    }
    style={
      Object {
        "height": 50,
      }
    }
  />
</View>
`;

exports[`renders correctly 1`] = `
<View
  onLayout={[Function]}
>
  <Image
    resizeMode="cover"
    source={
      Object {
        "uri": "/super-awesome-image.jpg",
      }
    }
    style={
      Object {
        "height": 0,
      }
    }
  />
</View>
`;
